--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Go Traffic</string>
+    <string name="app_name">GoTraffic</string>
 
     <string name="btn_Mapa">Mapa</string>
     <string name="btn_Conta">Conta</string>
@@ -11,4 +11,5 @@
     <string name="txtSenha">Senha</string>
     <string name="btn_Entrar">Entrar</string>
     <string name="btn_Cadastrar">Cadastrar</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
