MVC, Padronização de Nomes e Semântica do Código, Correção de erro do Location

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,13 +3,10 @@
 
     <string name="btn_Mapa">Mapa</string>
     <string name="btn_Conta">Conta</string>
-    <string name="btn_Mapeamento">Mapear</string>
-    <string name="btn_CheckIn">Check-In</string>
-    <string name="btn_Navegacao">Navegar</string>
-
     <string name="txtEmail">Email</string>
     <string name="txtSenha">Senha</string>
     <string name="btn_Entrar">Entrar</string>
     <string name="btn_Cadastrar">Cadastrar</string>
+    <string name="btn_Voltar">Voltar</string>
     <string name="title_activity_maps">Map</string>
 </resources>
